white space on witness text fixed

--- a/_Resources/css_styles/site_styles.scss
+++ b/_Resources/css_styles/site_styles.scss
@@ -85,9 +85,7 @@ body {
 	color: #036;
 	font-size: 16pt;
 }
-.section {
-	padding-top: 20px;
-}
+
 .head-subsection {
 	color: #036;
 	font-size: 14pt;
@@ -126,6 +124,7 @@ ul {
 	color: #000;
 	list-style-type: square;
 	padding-right: 30px;
+	font-size: 12pt;
 }
 
 /* T a b l e s */
@@ -887,8 +886,7 @@ position: fixed;
 	width: 39.85%;
 }
 #witnesses {
-	color: #FFF;
-	padding: 6%;
+	padding: 2%;
 }
 
 
